# dich-truyen-tien-hiep

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.en.md  README.md  TODO.md  pyproject.toml  run_web.bat  skills-lock.json  test.bat
.agent/memory/: architecture.md  cli.md  config.md  crawling.md  export.md  progress.md  styles.md  testing.md  translation.md
.agent/rules/: dev.md
.agent/skills/ui-ux-pro-max/scripts/: core.py  design_system.py  search.py
.agent/workflows/: update-memory.md
.agents/skills/translate-error-chapters/: SKILL.md
.claude/skills/translate-error-chapters/: SKILL.md
design-system/dich-truyen/: MASTER.md
design-system/dich-truyen/pages/: glossary-editor.md  reader.md  settings.md
docs/: ARCHITECTURE.md  MULTI_MODEL_CONFIG_PLAN.md  POLISH_PASS_IMPLEMENTATION.md
docs/plans/: 2026-02-24-desktop-ui-design.md  2026-02-24-desktop-ui-phase1.md  2026-02-24-desktop-ui-phase2.md  2026-02-24-desktop-ui-phase3.md  2026-02-25-desktop-ui-phase4.md  2026-02-28-resumable-web-pipeline-design.md  2026-02-28-resumable-web-pipeline-plan.md  2026-02-28-structured-logging-design.md  2026-02-28-structured-logging-plan.md  2026-03-01-style-manager-design.md  2026-03-01-style-manager-impl.md  2026-05-22-subagent-translation-design.md  2026-05-23-concurrent-subagent-translation-design.md  2026-05-23-concurrent-subagent-translation-plan.md
docs/superpowers/plans/: 2026-05-23-fix-translating-chapter-names.md  2026-05-23-improve-chapter-title-translation.md
docs/superpowers/specs/: 2026-05-23-fix-translating-chapter-names-design-spec.md  2026-05-23-improve-chapter-title-translation-design.md
scratch/: fix_chapter_names.py
scripts/: sanitize_lexical_sandbox.py  test_chapter_analysis.py  test_llm.py  update_book_metadata.py
src/dich_truyen/: __init__.py  cli.py  config.py  log.py
src/dich_truyen/api/: __init__.py  server.py  websocket.py
src/dich_truyen/api/routes/: books.py  export.py  glossary.py  pipeline.py  settings.py  styles.py
src/dich_truyen/crawler/: __init__.py  base.py  downloader.py  pattern.py
src/dich_truyen/exporter/: __init__.py  calibre.py  epub_assembler.py
src/dich_truyen/formatter/: __init__.py  assembler.py  metadata.py
src/dich_truyen/pipeline/: __init__.py  streaming.py
src/dich_truyen/services/: __init__.py  book_service.py  config_service.py  events.py  export_service.py  glossary_service.py  pipeline_service.py  style_service.py
src/dich_truyen/translator/: __init__.py  engine.py  glossary.py  llm.py  style.py  term_scorer.py
src/dich_truyen/utils/: encoding.py  progress.py
styles/: ngon_tinh.yaml  tay_phuong.yaml  tien_hiep.yaml
tests/: conftest.py  test_api.py  test_config.py  test_crawler.py  test_events.py  test_exporter.py  test_fix_chapter_names.py  test_formatter.py  test_glossary_service.py  test_pipeline.py  test_pipeline_service.py  test_services.py  test_style_api.py  test_style_manager.py  test_style_service.py  test_translator.py  test_update_book_metadata.py
web/: README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/new/: page.tsx
web/src/app/pipeline/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/styles/: page.tsx
web/src/components/book/: ChapterTable.tsx  (+1 more)
web/src/hooks/: useFocusTrap.ts  useWebSocket.ts
web/src/lib/: api.ts  types.ts
(+20 files in other folders)
