[project]
name = "dich-truyen"
version = "0.4.0"
description = "Chinese novel translation tool - Crawl, translate, and export to ebook"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "click>=8.1.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "chardet>=5.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dich-truyen = "dich_truyen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dich_truyen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Vietnamese/Chinese prompt strings and HTML templates can't be line-wrapped
"src/dich_truyen/translator/llm.py" = ["E501"]
"src/dich_truyen/translator/glossary.py" = ["E501"]
"src/dich_truyen/translator/engine.py" = ["E501"]
"src/dich_truyen/crawler/pattern.py" = ["E501"]
"src/dich_truyen/exporter/calibre.py" = ["E501"]
"src/dich_truyen/exporter/epub_assembler.py" = ["E501"]
"src/dich_truyen/pipeline/streaming.py" = ["E501"]
"src/dich_truyen/formatter/assembler.py" = ["W293"]  # HTML template whitespace
# Auto-generated skill scripts
".agent/skills/*/scripts/*.py" = ["E501", "F841"]
# One-off test scripts
"scripts/*.py" = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.2",
]
